--- a/index.html
+++ b/index.html
@@ -33,5 +33,34 @@
       <h3>I feel the tectonic plates move</h3>
       <p>It is a long established fact that a reader will...</p>
     </main>
+    <section>
+      <article class="card1">
+        <div><i class="fa-solid fa-music"></i></div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere velit
+          sunt dolore assumenda repudiandae nam inventore eveniet nobis tempora
+          ex doloremque totam cum, accusantium perferendis beatae? Corrupti
+          suscipit odit numquam.
+        </div>
+      </article>
+      <article class="card2">
+        <div><i class="fa-solid fa-user"></i></div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere velit
+          sunt dolore assumenda repudiandae nam inventore eveniet nobis tempora
+          ex doloremque totam cum, accusantium perferendis beatae? Corrupti
+          suscipit odit numquam.
+        </div>
+      </article>
+      <article class="card3">
+        <div><i class="fa-solid fa-video"></i></div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere velit
+          sunt dolore assumenda repudiandae nam inventore eveniet nobis tempora
+          ex doloremque totam cum, accusantium perferendis beatae? Corrupti
+          suscipit odit numquam.
+        </div>
+      </article>
+    </section>
   </body>
 </html>
